force-app/main/default/objects/Contact/fields/AP_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>AP_Email_Address__c</fullName>
    <label>AP Email Address</label>
    <type>Email</type>
</CustomField>