force-app/main/default/objects/Contact/fields/Email_Home__c.field-meta.xml
<CustomField>
    <fullName>Email_Home__c</fullName>
    <label>Email Home</label>
    <type>Email</type>
</CustomField>