force-app/main/default/objects/Contact/fields/External_Contact_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Contact_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Contact Record Id</label>
    <length>33</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>