force-app/main/default/objects/Contact/fields/Marketing_preference__c.field-meta.xml
<CustomField>
    <fullName>Marketing_preference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing preference</label>
    <type>Checkbox</type>
</CustomField>